Update ex001 JS course

--- a/javascript_course/ex001.html
+++ b/javascript_course/ex001.html
@@ -19,9 +19,9 @@
 <body>
     <h1>Hello World!</h1>
     <p>No curse of "Hello World!"</p>
-    <script>
-        window.alert('My first message!')
-        window.confirm('Are you enjoying the course?')
-    </script>
+    <script src="js/alert.js"></script>
+    <script src="js/confirm.js"></script>
+        
+    
 </body>
 </html>
