--- a/javascript_course/ex001.html
+++ b/javascript_course/ex001.html
@@ -5,23 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My First JS Program</title>
-    <style>
-      body {
-        background-color: rgb(105, 105, 236);
-        color: white;
-        font: normal 20pt Arial;
-      } 
-      h1  {
-        color: rgb(252, 252, 18)
-      }      
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
     <h1>Hello World!</h1>
     <p>No curse of "Hello World!"</p>
     <script src="js/alert.js"></script>
     <script src="js/confirm.js"></script>
-        
-    
+    <script src="js/prompt.js"></script>
 </body>
 </html>
