ex005b file update

--- a/javascript_guanabara/ex005b.html
+++ b/javascript_guanabara/ex005b.html
@@ -17,12 +17,12 @@
     <h1 id="id001">Starting DOM studies</h1>
     <p id="id002">The result is here</p>
     <p id="id003">Learning to use <strong>DOM</strong> in JavaScript</p>
-    <div id="msg">Click me</div>
+    <div id="id004">Click me</div>
     <script>
-        var p1 = window.document.getElementsById('id001')
-        var p2 = window.document.getElementsById('id002')
-        var h = window.document.getElementsById('id003')
-        var d = window.document.getElementsById('id004')
+        var p1 = window.document.getElementById('id001')
+        var p2 = window.document.getElementById('id002')
+        var h = window.document.getElementById('id003')
+        var d = window.document.getElementById('id004')
         p1.style.color = 'red'
         p1.style.background = 'black'
         p2.style.color = 'yellow'
