--- a/javascript_guanabara/ex006b.html
+++ b/javascript_guanabara/ex006b.html
@@ -17,23 +17,26 @@
     </style>
 </head>
 <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
+    <div id="area">
         Interact...  
     </div>
 
     <script>
-        var area = window.document.getElementById('area')
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
 
         function clicar() {
-            area.innerText = 'Clicou!'
-            area.style.background = 'red'
+            a.innerText = 'Clicou!'
+            a.style.background = 'red'
         }
         function entrar() {
-            area.innerText = 'Entrou!'
+            a.innerText = 'Entrou!'
         }
         function sair() {
-            area.innerText = 'Saiu!'
-            area.style.background = 'green'
+            a.innerText = 'Saiu!'
+            a.style.background = 'green'
         }
     </script>
 </body>
