--- a/javascript_guanabara/ex006b.html
+++ b/javascript_guanabara/ex006b.html
@@ -18,8 +18,7 @@
 </head>
 <body>
     <div id="area">
-        Interact...  
-    </div>
+        Interact
 
     <script>
         var a = window.document.getElementById('area')
@@ -33,6 +32,7 @@
         }
         function entrar() {
             a.innerText = 'Entrou!'
+            a.style.background = 'lightgreen'
         }
         function sair() {
             a.innerText = 'Saiu!'
