--- a/javascript_guanabara/ex006a.html
+++ b/javascript_guanabara/ex006a.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
-        Interact...  
+        Interact  
     </div>
 
     <script>
@@ -30,7 +30,7 @@
         }
         function entrar() {
             area.innerText = 'Entrou!'
-            a
+            area.style.background = 'lightgreen'
         }
         function sair() {
             area.innerText = 'Saiu!'
