Class4 saturno and tita file

--- a/escola_de_javascript/Javascript_fullstack/class4_saturno.html
+++ b/escola_de_javascript/Javascript_fullstack/class4_saturno.html
@@ -12,5 +12,8 @@
     <div>
         <a target="_blank" href="https://pt.wikipedia.org/wiki/Saturno_(planeta)">Para mais informações clique aqui</a>
     </div>
+    <div>
+        <a target="_blank" href="class4_tita.html">Lua de Titã</a>
+    </div>
 </body>
 </html>
