--- a/escola_de_javascript/Javascript_fullstack/class6_7_form copy.html
+++ b/escola_de_javascript/Javascript_fullstack/class6_7_form copy.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Encontre no Google</h1>
     <form action="http://www.google.com/search">
-        <label for="q">O que desenha pesquisar?</label>
-        <input type="text" id="q" name="q" placeholder="Escreva seu texto aqui">
+        <label for="q">O que deseja pesquisar?</label>
+        <input type="text" id="q" name="q" placeholder="Escreva seu texto aqui" required>
         <input type="submit" value="Pesquisar">
 
     </form>
