--- a/escola_de_javascript/Javascript_fullstack/css/CSS003_Seletores2/index.html
+++ b/escola_de_javascript/Javascript_fullstack/css/CSS003_Seletores2/index.html
@@ -9,20 +9,24 @@
 </head>
 <body>
     <h1>Tabela de custo da Voyager 1</h1>
-    <p><strong>Comunicação via satélite</strong></p>
+    <h4>Comunicação via satélite</h4>
+    <ul>
     <li>$10.010,00</li>
     <li>$20.008,00</li>
     <li>$10.002,05</li>
-
-    <p><strong>Ajustes de rota</strong></p>
+    </ul>
+    <h4>Ajustes de rota</h4>
+    <ul>
     <li>$30.007,00</li>
     <li>$44.015,00</li>
     <li>$34.012,00</li>
+    </ul>
 
-    <p><strong>Monitoramento</strong></p>
-    <li><span><a href="#">$40.030,00</a></span></li>
-    <li><span><a href="#">$44.028,00</a></span></li>
-    <li><spna><a href="#">$56.031,00</a></spna</li>
-
+    <h4>Monitoramento</h4>
+    <ul>
+    <li><a href="recibo">$40.030,00</a></li>
+    <li><a href="recibo">$44.028,00</a></li>
+    <li><a href="recibo">$56.031,00</a></li>
+    </ul>
 </body>
 </html>
