--- a/escola_de_javascript/Javascript_fullstack/css/CSS006_TextosFontes/indes.html
+++ b/escola_de_javascript/Javascript_fullstack/css/CSS006_TextosFontes/indes.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Geostar|Montserrat|Roboto&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     <h1>Voyager 1</h1>
