--- a/escola_de_javascript/Javascript_fullstack/bulma/index.html
+++ b/escola_de_javascript/Javascript_fullstack/bulma/index.html
@@ -20,6 +20,16 @@
 
             </div>
 
+            <article class="message is-primary">
+                    <div class="message-header">
+                      <p>Hello World</p>
+                      <button class="delete" aria-label="delete"></button>
+                    </div>
+                    <div class="message-body">
+                      Hello World!
+                    </div>
+            </article>
+
         </section>
     </body>
 </html>
