--- a/escola_de_javascript/Javascript_fullstack/bulma/index003.html
+++ b/escola_de_javascript/Javascript_fullstack/bulma/index003.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <title>Portfólio</title>
 </head>
 
@@ -14,7 +15,7 @@
     <header>
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
+                <a class="navbar-item" href="index003.html">
                     <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                 </a>
 
@@ -28,11 +29,11 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="index003.html">
                         Início
                     </a>
 
-                    <a class="navbar-item">
+                    <a class="navbar-item" href="contact.html">
                         Contato
                     </a>
                 </div>
