--- a/hcode-javascript/1-section/index.html
+++ b/hcode-javascript/1-section/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <script src="index6.js"></script>
+    <script src="function_somar_eval.js"></script>
     
 </body>
 </html>
