--- a/escola-de-javascript/javascript-fullstack/javascript/006-repeat_structure/ex/index.html
+++ b/escola-de-javascript/javascript-fullstack/javascript/006-repeat_structure/ex/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Switch exercise</title>
-    <script src="script.js"></script>
+    <title>While exercise</title>
+    <script src="index.js"></script>
 </head>
 <body>
-    Learning to use "switch"
+    While exercise
 </body>
 </html>
