atividade rádio podcast

--- a/igti-bootcamp-fullstack/capitulo01/interativa01/index.html
+++ b/igti-bootcamp-fullstack/capitulo01/interativa01/index.html
@@ -19,7 +19,7 @@
     </div>
 
   
- <script src=".js/podcasts.js"></script> 
- <script src=".js/script.js"></script>    
+ <script src="./js/podcasts.js"></script> 
+ <script src="./js/script.js"></script>    
 </body>
 </html>
