finalizando rádio podcast

--- a/igti-bootcamp-fullstack/capitulo01/interativa01/index.html
+++ b/igti-bootcamp-fullstack/capitulo01/interativa01/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
+
+    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>Rádio Podcast</title>
-</head>
-<body>
-  <h1>Rádio Podcast</h1>
-    <div>
-      <input id="inputFrequency" type="text" value="87.5" readonly disabled />
-    </div>
-    <div>
-      <input id="inputRange" type="range" min="87.5" max="108" step="0.1" value="87.5" />
-    </div>
-    <div id="divPodcasts">
-      Podcast
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="center">Rádio Podcast</h1>
+      <div class="center">
+        <input
+          id="inputFrequency"
+          class="inputFrequency"
+          type="text"
+          value="87.5"
+          readonly
+          disabled
+        />
+      </div>
+      <div>
+        <input
+          id="inputRange"
+          class="inputRange"
+          type="range"
+          min="87.5"
+          max="108"
+          step="0.1"
+          value="87.5"
+        />
+      </div>
+      <div id="divPodcasts" class="center" >
+        Podcast
+      </div>
     </div>
 
-  
- <script src="./js/podcasts.js"></script> 
- <script src="./js/script.js"></script>    
-</body>
+    <script src="./js/podcasts.js"></script>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
