atualizacao de arquivo

--- a/igti-bootcamp-fullstack/capitulo01/interativa01/index.html
+++ b/igti-bootcamp-fullstack/capitulo01/interativa01/index.html
@@ -18,7 +18,7 @@
           id="inputFrequency"
           class="inputFrequency"
           type="text"
-          value="87.5"
+          value=""
           readonly
           disabled
         />
