--- a/igti-bootcamp-fullstack/semana04/aula05/react-counter-01/public/index.html
+++ b/igti-bootcamp-fullstack/semana04/aula05/react-counter-01/public/index.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
