Class components part 2

--- a/igti-bootcamp-fullstack/semana04/aula05/react-counter-01/public/index.html
+++ b/igti-bootcamp-fullstack/semana04/aula05/react-counter-01/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +24,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -34,7 +37,7 @@
     -->
 
     <!-- Definição do título do projeto -->
-    <title>React Counter 01</title>
+    <title>React Counter 01 e 02</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
